# its_alive

./: .gitignore  LICENSE  README.md
robots/robot_common/: CMakeLists.txt  package.xml
robots/robot_common/launch/: debug_robot_description.launch  simulation.launch
robots/robot_common/rviz/: robot_description.rviz
robots/robot_common/urdf/: common.urdf.xacro  gazebo_ros_control.urdf.xacro  materials.urdf.xacro
robots/traverser/: CMakeLists.txt  package.xml
robots/traverser/description/urdf/: traverser.urdf  traverser.urdf.xacro
robots/traverser/description/urdf/actuators/: wheel.urdf.xacro
robots/traverser/description/variants/: traverser.urdf.xacro
robots/traverser/launch/: traverser.launch
robots/traverser/plugin/: traverser_controller_plugin.cpp
robots/traverser/urdf/: traverser.urdf.xacro
robots/traverser/urdf/actuators/: wheel.urdf.xacro
